tests/snapshots/parser__member_access__chained.snap
---
source: tests/parser.rs
expression: "parse(\"a.b.c\")"
---
Ok(
    [
        Expr(
            Member {
                recv: Member {
                    recv: Identifier(
                        "a",
                        Span {
                            start: 0,
                            end: 1,
                        },
                    ),
                    field: "b",
                    span: Span {
                        start: 0,
                        end: 3,
                    },
                },
                field: "c",
                span: Span {
                    start: 0,
                    end: 5,
                },
            },
        ),
    ],
)
