tests/snapshots/parser__member_access__dot_without_field_is_error.snap
---
source: tests/parser.rs
expression: "parse(\"a.\")"
---
Err(
    ParseError {
        message: "expected field name after `.`, found Eof",
        span: Span {
            start: 2,
            end: 2,
        },
    },
)
