tests/snapshots/parser__member_access__member_on_list_literal.snap
---
source: tests/parser.rs
expression: "parse(\"[1,2].first\")"
---
Ok(
    [
        Expr(
            Member {
                recv: List {
                    items: [
                        Int(
                            1,
                            Span {
                                start: 1,
                                end: 2,
                            },
                        ),
                        Int(
                            2,
                            Span {
                                start: 3,
                                end: 4,
                            },
                        ),
                    ],
                    span: Span {
                        start: 0,
                        end: 5,
                    },
                },
                field: "first",
                span: Span {
                    start: 0,
                    end: 11,
                },
            },
        ),
    ],
)
